# ReWave-Net

./: .gitattributes  .gitignore  CITATION.cff  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/: single_sample.yaml
data/: README.md
docs/: experiment_protocol.md  method_notes.md  repository_release_checklist.md  residual_conditioned_wavelet_method.md  results.md  unrolled_complex_unet_baseline_report.md
results/: README.md  experiment_config.json  matched_comparison.csv  rewave_net_metrics.csv  rewave_net_training_history.csv
scripts/: README.md  _bootstrap.py  evaluate_complex_unet_with_dc.py  evaluate_frequency_aware_recon_with_dc.py  evaluate_frequency_aware_unet_soft_dc_sweep.py  evaluate_frequency_aware_unet_with_dc.py  evaluate_kan_frequency_aware_unet_soft_dc_sweep.py  evaluate_rewave_net.py  evaluate_unet_baseline.py  evaluate_unet_with_dc.py  evaluate_unrolled_frequency_aware_recon.py  evaluate_zero_filled_baseline.py  generate_unrolled_complex_baseline_report.py  inspect_h5_file.py  run_data_consistency_check.py  run_single_sample_baseline.py  summarize_matched_comparison.py  summarize_results.py  summarize_unrolled_ablation.py  summarize_unrolled_evaluation.py  test_multifile_dataset.py  test_residual_conditioned_wavelet_model.py  test_rewave_net.py  train_complex_unet.py  train_frequency_aware_recon.py  train_frequency_aware_unet.py  train_frequency_aware_unet_with_dc.py  train_kan_frequency_aware_unet.py  train_kan_frequency_aware_unet_multifile.py  train_rewave_net.py  train_unet_baseline.py  train_unrolled_frequency_aware_recon_multifile.py
src/mri_recon/: baselines.py  io.py  sampling.py  transforms.py  visualization.py
src/mri_recon/data/: complex_dataset.py  dataset.py  multi_file_complex_dataset.py
src/mri_recon/evaluation/: complex_metrics.py  metrics.py
src/mri_recon/models/: __init__.py  common.py  complex_unet.py  frequency_aware_recon.py  frequency_aware_unet.py  kan_frequency_aware_unet.py  residual_conditioned_wavelet_unet.py  rewave_net.py  unet.py  unrolled_frequency_aware.py
src/mri_recon/reconstruction/: data_consistency.py  torch_ops.py
