[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "rewave-net"
version = "0.1.0"
description = "Measurement-residual-conditioned wavelet unrolled MRI reconstruction."
readme = "README.md"
requires-python = ">=3.9"
keywords = ["MRI", "image reconstruction", "wavelets", "unrolled networks"]
dependencies = [
    "numpy",
    "h5py",
    "matplotlib",
    "pyyaml",
    "scikit-image",
    "torch",
    "torchvision",
    "tqdm",
]

[project.urls]
Repository = "https://github.com/nxue-lang/ReWave-Net"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
ignore = []

[tool.ruff.lint.per-file-ignores]
"scripts/*.py" = ["E402"]
